Style login, signup, demo, logout buttons

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,7 +2,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Urbanist', sans-serif;
     margin: 0;
     padding: 0;
 }
