--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -1,6 +1,7 @@
 .hero-splash-container {
     border: 5px solid red;
     height: 100vh;
+    min-width: 1000px;
 }
 
 .splash-container {
@@ -13,17 +14,52 @@
     align-items: center;
 }
 
+.welcome-title {
+    color: #D9D9D9;
+    margin: 35px 0px;
+}
 
-.demo-button {
+/* ---------- LOGIN SIGNUP DEMO BUTTONS ---------- */
+.login-button,
+.signup-button,
+.demo-button,
+.logout-button {
     width: 200px;
     height: 75px;
-    background-color: #C1B2AB;
     border-radius: 8px;
     border: none;
     box-shadow: 4px 4px 12px 3px #000;
+    transition: opacity 0.5s ease;
+    font-size: 2rem;
+    font-weight: 500;
+    color: #333;
 }
 
-.demo-button:hover {
+.login-button:hover,
+.signup-button:hover,
+.demo-button:hover,
+.logout-button:hover {
     opacity: 0.7;
     cursor: pointer;
+}
+
+.login-button {
+    background-color: #C1B2AB;
+    margin-right: 25px;
+    margin-top: 30px;
+}
+
+.signup-button {
+    background-color: #4F7F9B;
+    margin-top: 30px;
+}
+
+.demo-button {
+    background-color: #D9D9D9;
+    margin-top: 25px;
+}
+
+.logout-button {
+    background-color: #D9D9D9;
+    margin-top: 30px;
 }
