--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -20,10 +20,10 @@
 
 #modal-content {
     position: absolute;
-    background-color: white;
+    background-color: #D9D9D9;
     border-radius: 12px;
     width: 100%;
     max-width: 920px;
     min-width: 700px;
-    padding: 20px;
+    padding: 40px;
 }
