Create footer with dynamic CSS

--- a/react-app/src/components/Auth/AuthForms.css
+++ b/react-app/src/components/Auth/AuthForms.css
@@ -54,6 +54,8 @@
     border-bottom-right-radius: 6px;
 }
 
+
+/* SUMBIT BUTTON */
 .submit-button {
     padding: 20px 50px;
     margin-top: 20px;
