--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -23,7 +23,8 @@
 .login-button,
 .signup-button,
 .demo-button,
-.logout-button {
+.logout-button,
+.room-1-button {
     width: 200px;
     height: 75px;
     border-radius: 6px;
@@ -38,7 +39,8 @@
 .login-button:hover,
 .signup-button:hover,
 .demo-button:hover,
-.logout-button:hover {
+.logout-button:hover,
+.room-1-button:hover {
     opacity: 0.7;
     cursor: pointer;
 }
@@ -61,5 +63,5 @@
 
 .logout-button {
     background-color: #D9D9D9;
-    margin-top: 30px;
+    margin: 30px 0px 0px 30px;
 }
