Fix footer bug, update logo centering

--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -14,6 +14,10 @@
     align-items: center;
 }
 
+.splash-logo-container {
+    margin-left: 20px;
+}
+
 .welcome-title {
     color: #D9D9D9;
     margin: 35px 0px;
