Implement read note details functionality

--- a/react-app/src/components/Forms.css
+++ b/react-app/src/components/Forms.css
@@ -115,3 +115,11 @@
     transform: scale(1.04);
     opacity: 0.85;
 }
+
+
+/* NOTES SPECIFIC */
+.create-note-title,
+.update-note-title {
+    font-size: 2rem;
+    margin-bottom: 12px;
+}
