--- a/react-app/src/components/Notes/Notes.css
+++ b/react-app/src/components/Notes/Notes.css
@@ -2,12 +2,16 @@
     display: flex;
     justify-content: space-between;
     font-size: 2rem;
+    margin-left: 27px;
+    color: #D9D9D9;
+}
+
+.add-icon {
+    margin-right: 21px;
 }
 
 .all-notes-container {
     padding: 10px 0px;
-    max-height: 90vh;
-    overflow-y: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -16,16 +20,6 @@
 .note-container {
     width: 125px;
     margin: 0px 15px 30px;
-}
-
-.note-card {
-    width: 100%;
-    height: 125px;
-    background-color: #C1B2AB;
-    border-radius: 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .note-title {
@@ -56,4 +50,44 @@
 .delete-icon:hover {
     cursor: pointer;
     transform: scale(1.2);
+}
+
+
+/* READ NOTE / NOTE DETAILS */
+.note-card {
+    width: 100%;
+    height: 125px;
+    background-color: #C1B2AB;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.4s ease;
+}
+
+.note-card:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.note-details-container {
+    background-color: #C1B2AB;
+    text-align: center;
+    margin: 200px 175px;
+    min-width: 500px;
+    height: 450px;
+    border-radius: 6px;
+}
+
+.note-details-title {
+    padding: 10px;
+    font-size: 2.7rem;
+    border-bottom: 1px solid #777;
+    color: #333;
+}
+
+.note-details-body {
+    padding: 20px 50px;
+    font-size: 1.7rem;
+    text-align: left;
 }
