Update api route for rooms to add room images

--- a/react-app/src/components/Game/Game.css
+++ b/react-app/src/components/Game/Game.css
@@ -39,6 +39,8 @@
 .rooms {
     grid-area: rooms;
     border: 1px solid pink;
+    min-width: 800px;
+    position: relative;
 }
 .items {
     grid-area: items;
