Create Room Title, fix item forms style

--- a/react-app/src/components/Forms.css
+++ b/react-app/src/components/Forms.css
@@ -121,9 +121,11 @@
 }
 
 
-/* NOTES SPECIFIC */
+/* NOTES & ITEMS SPECIFIC */
 .create-note-title,
-.update-note-title {
+.update-note-title,
+.create-item-name,
+.update-item-name {
     font-size: 2rem;
     margin-bottom: 12px;
 }
