Implement room 1 game logic with event logs

--- a/react-app/src/components/Game/Game.css
+++ b/react-app/src/components/Game/Game.css
@@ -63,6 +63,7 @@
 }
 .logs {
     grid-area: logs;
-    border: 1px solid burlywood;
+    border: 1px solid #3F3F3F;
     width: 100%;
+    position: relative;
 }
