--- a/react-app/src/components/Rooms/Rooms.css
+++ b/react-app/src/components/Rooms/Rooms.css
@@ -11,6 +11,7 @@
 }
 
 
+
 /* GENERAL ROOM IMGS */
 .room-img {
     position: absolute;
@@ -19,6 +20,8 @@
     object-fit: cover;
     transition: filter 1s ease;
 }
+
+
 
 /* ========== ROOM 1 ========== */
 .intro-story {
@@ -75,6 +78,7 @@
 }
 
 
+
 /* ========== ROOM 2 ========== */
 .room-2-note {
     width: 40px;
@@ -101,5 +105,22 @@
 }
 
 .snake:hover {
+    box-shadow: 0px 0px 12px 1px #D9D9D9;
+}
+
+
+
+/* ========== ROOM 3 ========== */
+.room-3-note {
+    width: 40px;
+    height: 40px;
+    background-color: #C1B2AB;
+    border-radius: 6px;
+    opacity: 0.05;
+    position: absolute;
+    right: 2%;
+    bottom: 20%;
+}
+.room-3-note:hover {
     box-shadow: 0px 0px 12px 1px #D9D9D9;
 }
