--- a/react-app/src/components/Forms.css
+++ b/react-app/src/components/Forms.css
@@ -87,7 +87,7 @@
     object-fit: cover;
     width: 150px;
     height: 150px;
-    border-radius: 4px;
+    border-radius: 50%;
     margin: 10px 0px;
     display: block;
 }
