--- a/react-app/src/components/Rooms/Rooms.css
+++ b/react-app/src/components/Rooms/Rooms.css
@@ -63,13 +63,13 @@
 }
 
 .bottle {
-    width: 8px;
-    height: 30px;
+    width: 6px;
+    height: 20px;
     border-radius: 15px;
     background-color: none;
     position: absolute;
-    bottom: 15%;
-    left: 30%;
+    bottom: 10%;
+    left: 20%;
 }
 
 .bottle:hover {
@@ -81,31 +81,35 @@
 
 /* ========== ROOM 2 ========== */
 .room-2-note {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-color: #C1B2AB;
     border-radius: 6px;
     opacity: 0.2;
     position: absolute;
     right: 10%;
     top: 45%;
+    transition: opacity 0.5s ease;
 }
 .room-2-note:hover {
+    opacity: 0.4;
     box-shadow: 0px 0px 12px 1px #D9D9D9;
 }
 
 .snake {
-    width: 10px;
-    height: 70px;
+    width: 8px;
+    height: 40px;
     border-radius: 15px;
     background-color: none;
     position: absolute;
-    bottom: 2%;
+    bottom: -2%;
     left: 50%;
+    transition: box-shadow 0.6s ease;
 }
 
 .snake:hover {
     box-shadow: 0px 0px 12px 1px #D9D9D9;
+    cursor: pointer;
 }
 
 
@@ -120,8 +124,10 @@
     position: absolute;
     right: 2%;
     bottom: 20%;
+    transition: opacity 0.4s ease;
 }
 .room-3-note:hover {
+    opacity: 0.06;
     box-shadow: 3px 3px 12px 1px #D9D9D9;
 }
 
@@ -129,19 +135,19 @@
 
 /* ========== ROOM 4 ========== */
 .room-4-console {
-    width: 50px;
-    height: 35px;
+    width: 40px;
+    height: 25px;
     background-color: none;
     border-radius: 12px;
     overflow: hidden;
-    opacity: 0.4;
+    opacity: 0.15;
     position: absolute;
     right: 37%;
     top: 45%;
     transition: transform 0.5s ease;
 }
 .room-4-console:hover {
-    transform: scale(1.1);
+    transform: scale(1.15);
     cursor: pointer;
 }
 .room-4-console-img {
@@ -155,7 +161,7 @@
     height: 40px;
     background-color: none;
     border-radius: 6px;
-    opacity: 0.1;
+    opacity: 0.03;
     position: absolute;
     left: 3%;
     bottom: 25%;
@@ -164,7 +170,7 @@
 }
 .room-4-rabbit:hover {
     transform: scale(1.1);
-    opacity: 0.3;
+    opacity: 0.2;
     cursor: pointer;
 }
 .room-4-rabbit-img {
@@ -182,7 +188,7 @@
     height: 40px;
     background-color: none;
     border-radius: 6px;
-    opacity: 0.6;
+    opacity: 0.5;
     position: absolute;
     left: 50%;
     top: 5%;
