--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -2,22 +2,48 @@
     height: 100vh;
     min-width: 1000px;
 }
-
-.splash-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+/* ---------------------- HERO -------------------- */
+.hero-container {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
 }
 
-.splash-logo-container {
-    margin-left: 20px;
+.hero-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
+/* ---------- SPLASH (LOGIN, SIGNUP, ETC) -------- */
+.splash-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+
+.login-signup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.hero-logo {
+    margin: 0px 0px 40px 25px;
 }
 
 .welcome-title {
-    color: #D9D9D9;
-    margin: 35px 0px;
+    font-size: 2.5rem;
+    color: #333;
+    margin-bottom: 27px;
 }
 
 /* ---------- LOGIN SIGNUP DEMO BUTTONS ---------- */
@@ -30,7 +56,7 @@
     height: 75px;
     border-radius: 6px;
     border: none;
-    box-shadow: 2px 2px 12px 2px #000;
+    box-shadow: 2px 4px 14px 0.5px #333;
     transition: opacity 0.5s ease;
     font-size: 2rem;
     font-weight: 500;
@@ -48,21 +74,21 @@
 
 .login-button {
     background-color: #C1B2AB;
-    margin-right: 25px;
-    margin-top: 30px;
+    /* margin-right: 25px; */
+    /* margin-top: 30px; */
 }
 
 .signup-button {
     background-color: #4F7F9B;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 .demo-button {
     background-color: #D9D9D9;
-    margin-top: 25px;
+    /* margin-top: 25px; */
 }
 
 .logout-button {
     background-color: #D9D9D9;
-    margin: 30px 0px 0px 30px;
+    /* margin: 30px 0px 0px 30px; */
 }
