--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -36,7 +36,6 @@
 
 
 
-
 /* ---------- SPLASH (LOGIN, SIGNUP, ETC) -------- */
 .splash-container {
     height: 100%;
@@ -69,7 +68,8 @@
 .signup-button,
 .demo-button,
 .logout-button,
-.room-1-button {
+.room-1-button,
+.reset-button {
     width: 250px;
     height: 75px;
     border-radius: 6px;
@@ -85,6 +85,7 @@
 .signup-button:hover,
 .demo-button:hover,
 .logout-button:hover,
+.reset-button:hover,
 .room-1-button:hover {
     opacity: 0.7;
     cursor: pointer;
@@ -109,4 +110,9 @@
 .logout-button {
     background-color: #D9D9D9;
     /* margin: 30px 0px 0px 30px; */
+}
+
+.reset-button {
+    background-color: rgb(214, 0, 0);
+    color: #FFF;
 }
