--- a/react-app/src/components/Forms.css
+++ b/react-app/src/components/Forms.css
@@ -29,6 +29,17 @@
     justify-content: center;
 }
 
+.form-field-input-container {
+    position: relative;
+}
+
+.input-label {
+    position: absolute;
+    color: #999;
+    top: 5px;
+    left: 5px;
+}
+
 .form-field-input {
     padding: 20px 75px;
     border: none;
