--- a/react-app/src/components/Game/Game.css
+++ b/react-app/src/components/Game/Game.css
@@ -1,6 +1,6 @@
 .game-container {
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     /* min-width: 1000px; */
     background-color: #333;
     display: grid;
@@ -14,6 +14,7 @@
       'notes logs logs logs items'
       'notes logs logs logs items';
     padding: 10px;
+    margin-bottom: 100px;
 }
 
 .top,
@@ -28,42 +29,45 @@
     grid-area: top;
     position: relative;
     height: 125px;
-    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: flex-end;
 }
 .notes {
     grid-area: notes;
-    border: 2px solid #3F3F3F;
+    border: 2px dotted #3F3F3F;
     padding: 20px;
     min-width: 360px;
-    max-width: 525px;
-    /* width: 100vh; */
-    /* width: 360px; */
+    max-width: 360px;
+    /* max-width: 525px; */
+    height: 88vh;
+    width: 100%;
     overflow-y: auto;
+    justify-self: end;
+    margin-right: 5px;
 }
 .rooms {
     grid-area: rooms;
     min-width: 1080px;
-    width: 100%;
     border-radius: 6px;
     overflow: hidden;
     position: relative;
 }
 .items {
     grid-area: items;
-    border: 2px solid #3F3F3F;
+    border: 2px dotted #3F3F3F;
     padding: 20px;
     min-width: 360px;
-    max-width: 525px;
-    /* width: 100vh; */
-    /* width: 360px; */
+    max-width: 360px;
+    /* max-width: 525px; */
+    height: 88vh;
+    width: 100%;
     overflow-y: auto;
+    margin-left: 5px;
 }
 .logs {
     grid-area: logs;
-    border: 1px solid #3F3F3F;
+    /* border: 1px solid #3F3F3F; */
     width: 100%;
     height: 100%;
     overflow-y: auto;
