--- a/react-app/src/components/Profile/Profile.css
+++ b/react-app/src/components/Profile/Profile.css
@@ -57,12 +57,13 @@
 
 .x {
     position: absolute;
-    right: 2px;
-    top: 2px;
+    right: 3px;
+    top: 3px;
+    padding: 3px 3px 0px 3px;
 }
 
 .x:hover {
     /* box-shadow: 0px 0px 3px #999; */
-    outline: 1px solid #999;
+    outline: 1px dotted #999;
     cursor: pointer;
 }
