--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -53,7 +53,7 @@
 .item-card {
     width: 100%;
     height: 125px;
-    border-radius: 6px;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -76,7 +76,7 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 6px;
+    border-radius: 50%;
     position: absolute;
 }
 
@@ -106,7 +106,7 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 6px;
+    border-radius: 50%;
     position: absolute;
     top: 0;
     left: 0;
