--- a/react-app/src/components/Timer/Timer.css
+++ b/react-app/src/components/Timer/Timer.css
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-shadow: 2px 2px 2px #111;
 }
 
 .hourglass-icon {
