--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -4,6 +4,7 @@
     font-size: 2rem;
     margin-left: 27px;
     color: #D9D9D9;
+    text-shadow: 2px 2px 2px #111;
 }
 
 .add-icon {
@@ -85,15 +86,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 39px 0px;
 }
 
 .item-img-container {
     text-align: center;
-    min-width: 500px;
+    min-width: 450px;
     height: 450px;
     border-radius: 6px;
     position: relative;
     margin-top: 10px;
+    display: flex;
 }
 
 .item-details-name {
@@ -104,8 +107,8 @@
 
 .item-details-img {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 450px;
+    height: 450px;
     border-radius: 50%;
     position: absolute;
     top: 0;
