--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -17,6 +17,12 @@ footer {
 .footer-icons {
     width: 30px;
     height: 30px;
+    transition: transform 0.4s ease-out;
+}
+
+.footer-icons:hover {
+    opacity: 0.8;
+    transform: scale(1.2);
 }
 
 .copyright-icon {
@@ -33,17 +39,17 @@ footer {
     margin-right: 0px;
 }
 
-.footer-links:hover {
-    opacity: 0.7;
-}
+/* .footer-links:hover {
+    opacity: 0.5;
+} */
 
-.michael-linkedin {
+.michael-portfolio {
     text-decoration: none;
     color: #FFF;
     font-weight: 900;
 }
 
-.michael-linkedin:hover {
+.michael-portfolio:hover {
     text-decoration: underline;
 }
 
